--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -50,41 +50,8 @@
     <qresource prefix="/images">
         <file alias="about">res/images/about.png</file>
         <file alias="splash">res/images/splash.png</file>
-        <file alias="backg">res/images/wallet.png</file>
-        <file alias="coinrush">res/images/coinrush.png</file>
-        <file alias="breihost">res/images/breihost.png</file>
         <file alias="bkg">res/images/home-background.jpg</file>
-        <file>res/images/AlpenShopImg.png</file>
-        <file>res/images/AmazoniaShopImg.png</file>
-        <file>res/images/BitezzeShopImg.png</file>
-        <file>res/images/BterNetCnyImg.png</file>
-        <file>res/images/BterNetLtcImg.png</file>
-        <file>res/images/CoinStuffShopImg.png</file>
-        <file>res/images/CryptoDirectShopImg.png</file>
-        <file>res/images/CryptsyNetBtcImg.png</file>
-        <file>res/images/CryptsyNetLtcImg.png</file>
-        <file>res/images/eCasinoImg.png</file>
-        <file>res/images/ExplorerImg.png</file>
-        <file>res/images/ForumImg.png</file>
-        <file>res/images/GRKreationsShopImg.png</file>
-        <file>res/images/MasterMindShopImg.png</file>
-        <file>res/images/PaperWalletImg.png</file>
-        <file>res/images/PiccaShopImg.png</file>
-        <file>res/images/RetroTowersShopImg.png</file>
-        <file>res/images/ScryptStoreShopImg.png</file>
-        <file>res/images/ServerBrosShopImg.png</file>
-        <file>res/images/SongsOfLoveShopImg.png</file>
-        <file>res/images/StakingMachineShopImg.png</file>
-        <file>res/images/TuffWrapsShopImg.png</file>
-        <file>res/images/WaterIDoShopImg.png</file>
-        <file>res/images/WrolInfoShopImg.png</file>
-        <file>res/images/ZetaSteamShopImg.png</file>
         <file>res/images/home-background.png</file>
-        <file>res/images/LotteryImg.png</file>
-        <file>res/images/SpendYourNetcoins.png</file>
-        <file>res/images/GiveToCharity.png</file>
-        <file>res/images/PurchaseNetcoins.png</file>
-        <file>res/images/FancyAFlutter.png</file>
         <file>res/images/dialogBackground.jpg</file>
         <file>res/images/Development/android.png</file>
         <file>res/images/Development/anon.png</file>
@@ -95,32 +62,11 @@
         <file>res/images/HeaderText/PurchaseNetcoins.png</file>
         <file>res/images/HeaderText/SpendNetcoins.png</file>
         <file>res/images/HeaderText/UsefulLinks.png</file>
-        <file>res/images/residencialCastor.png</file>
-        <file>res/images/unbAuctions.png</file>
-        <file>res/images/bittrexNetBtc.png</file>
-        <file>res/images/bterNetBtc.png</file>
-        <file>res/images/crytpsyNetXrpIng.png</file>
-        <file>res/images/Cryptopia.png</file>
-        <file>res/images/Cryptopia2.png</file>
-        <file>res/images/Forum.png</file>
-        <file>res/images/coinserver2.png</file>
-        <file>res/images/coinserver1.png</file>
-        <file>res/images/payservices.png</file>
-        <file>res/images/foundation.png</file>
-        <file>res/images/Site.png</file>
-        <file>res/images/novaex3.png</file>
-        <file>res/images/mining-dutch.png</file>
-        <file>res/images/coin2pay.png</file>
     </qresource>
     <qresource prefix="/movies">
         <file alias="update_spinner">res/movies/update_spinner.mng</file>
     </qresource>
-    <qresource prefix="/translations">
-        <file alias="en">locale/bitcoin_en.qm</file>
-        <file alias="ru">locale/bitcoin_ru.qm</file>
-        <file alias="nl">locale/bitcoin_nl.qm</file>
-        <file alias="fr">locale/bitcoin_fr.qm</file>
-    </qresource>
+    <qresource prefix="/translations"/>
     <qresource prefix="/toolTip">
         <file>res/tooltips/stakingTooltip.png</file>
         <file>res/tooltips/spendableTooltip.png</file>
@@ -213,8 +159,6 @@
         <file>res/tooltips/foundationsiteTooltip.png</file>
     </qresource>
     <qresource prefix="/">
-        <file>res/images/netcoinPool.png</file>
-        <file>res/images/diceFortune.png</file>
         <file>res/images/stores/aboveAllHousePlans.png</file>
         <file>res/images/stores/amazetreats.png</file>
         <file>res/images/stores/azarius.png</file>
